--- a/resources/index.html
+++ b/resources/index.html
@@ -6,11 +6,10 @@
 		<meta name="description" content="WMR App" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<link rel="icon" href="data:" />
-		<link rel="stylesheet" href="/dist/index.css"></link>
 	</head>
 	<body style="width: 100%; height: 100%">
-		<script src="tailwindcss-jit-cdn.umd.min.js"></script>
-		<script type="module" src="/globals.js"></script>
-		<script type="module" src="/dist/index.js"></script>
+		<script src="/dist/css/tailwindcss-jit-cdn.umd.min.js"></script>
+		<script type="module" src="/dist/js/globals.js"></script>
+		<script type="module" src="/index.js"></script>
 	</body>
 </html>
