--- a/resources/index.html
+++ b/resources/index.html
@@ -8,8 +8,9 @@
 		<link rel="icon" href="data:" />
 	</head>
 	<body style="width: 100%; height: 100%">
-		<script src="/dist/css/tailwindcss-jit-cdn.umd.min.js"></script>
+		<script src="https://unpkg.com/tailwindcss-jit-cdn"></script>
 		<script type="module" src="/dist/js/globals.js"></script>
-		<script type="module" src="/index.js"></script>
+		<script type="module" src="/dist/index.js"></script>
+		<div style="width: 100%; height: 100%" id="app"></div>
 	</body>
 </html>
