--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body style="width: 100%; height: 100%">
 		<script src="https://unpkg.com/tailwindcss-jit-cdn"></script>
-		<script type="module" src="/dist/js/globals.js"></script>
+		<script type="module" src="/js/globals.js"></script>
 		<script type="module" src="/dist/index.js"></script>
 		<div style="width: 100%; height: 100%" id="app"></div>
 	</body>
