Change page title

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en" style="width: 100%; height: 100%">
 	<head>
 		<meta charset="utf-8" />
-		<title>WMR App</title>
-		<meta name="description" content="WMR App" />
+		<title>Lowkey Sidebar App</title>
+		<meta name="description" content="Lowkey Sidebar App" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<link rel="icon" href="data:" />
 	</head>
